2005-01-02  Davyd Madeley  <davyd@madeley.id.au>

	* src/yelp-info-parser.c: Chained info support, parser fixes, and free
	  some memory we'll never need again a little earlier to save space.

2005-01-01  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	* src/yelp-error.c:
	* src/yelp-error.h:
	* src/yelp-io-channel.c:
	* src/yelp-man-pager.c:
	* src/yelp-toc-pager.c:
	* src/yelp-window.c:
	* src/yelp-xslt-pager.c:
	- HIGified the error dialogs

	* src/yelp-utils.c:
	* src/yelp-window.c:
	- Handle man: and info: URIs with errors when --disable-(man|info)

	* stylesheets/info2html.xsl:
	- Set the title of info pages

2004-12-31  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-utils.c:
	- Strip off frags when doing doc_info_table lookups

2004-12-31  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-info-pager.c:
	- Make a hash of section ids and do resolve_frag properly

2004-12-31  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-info-pager.c:
	- Put the GtkTreeStore in the YelpInfoPagerPriv
	- Return "Top" in resolve_frag, just so something will show up

	* src/yelp-window.c:
	- Set sections in the "start" callback

	* stylesheets/info2html.xsl:
	- s/Document/Section/

2004-12-31  Davyd Madeley  <davyd@madeley.id.au>

	* src/yelp-info-pager.c:
	* src/yelp-info-parser.c:
	* src/yelp-info-parser.h: Generate simple XML for GNU Info support. No
	  markup yet.

2004-12-31  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/info2html.xsl:
	- Very basic info stylesheet

2004-12-31  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	* src/yelp-pager.h:
	* src/yelp-window.c:
	- Added an enum for document outline columns

	* stylesheets/toc2html.xsl:
	- Some CSS work

2004-12-31  Davyd Madeley  <davyd@madeley.id.au>

	* src/yelp-info-parser.c (add):
	* src/yelp-info-parser.h (add):
	* src/yelp-info-pager.c: Start of GNU Info support
	* src/Makefile.am: Compile added files

2004-12-31  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am: